# mlwm-deployment

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: image.yml  pre-commit.yml  pytest.yml
configurations/gefion1_FakeDINI+FakeIFS/: Containerfile  pyproject.toml
configurations/surface-dummy-model_DINI/: .gitignore  Containerfile  DEVELOPING.md  README.md  build_image.sh  config.yaml  datastore.yaml  entry.sh  pyproject.toml  run_inference_container.sh
configurations/surface-dummy-model_DINI/dev-utils/: create_env_file.sh
configurations/surface-dummy-model_DINI/src/: create_inference_dataset.py
src/mlwm/: build_inference_artifact.py  config_spec.py  paths.py  run_models.py
src/mlwm/tests/: test_paths.py
