[project]
name = "mlwm-deployment"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "parse>=1.20.2",
    "dask>=2025.4.1",
    "dataclass-wizard",
    "dotenv>=0.9.9",
    "ipdb>=0.13.13",
    "loguru>=0.7.3",
    "mllam-data-prep>=0.6.0",
    "s3fs>=2025.3.2",
    "tqdm>=4.67.1",
    "universal-pathlib>=0.2.6",
    "zarr>=3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.isort]
profile = "black"
[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
